--- a/index.css
+++ b/index.css
@@ -25,62 +25,6 @@ font-family: 'Source Sans Pro', sans-serif; <-- standard text
   background: #555555; 
 }
 
-/* COLOR PALETTE START */
-
-#data-view {
-  color: white;
-}
-
-.color-primary-0 {
-  color: #10054f;
-} /* Main Primary color */
-.color-primary-1 {
-  color: #715fe6;
-}
-.color-primary-2 {
-  color: #3e27ca;
-}
-.color-primary-3 {
-  color: #0b0530;
-}
-.color-primary-4 {
-  color: #120e2a;
-}
-
-.color-secondary-1-0 {
-  color: #2b034d;
-} /* Main Secondary color (1) */
-.color-secondary-1-1 {
-  color: #a255e4;
-}
-.color-secondary-1-2 {
-  color: #771cc6;
-}
-.color-secondary-1-3 {
-  color: #1a032f;
-}
-.color-secondary-1-4 {
-  color: #1b0c29;
-}
-
-.color-secondary-2-0 {
-  color: #03224b;
-} /* Main Secondary color (2) */
-.color-secondary-2-1 {
-  color: #5792e3;
-}
-.color-secondary-2-2 {
-  color: #1e64c4;
-}
-.color-secondary-2-3 {
-  color: #03152e;
-}
-.color-secondary-2-4 {
-  color: #0c1828;
-}
-
-/* COLOR PALETTE END */
-
 html {
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
@@ -237,11 +181,6 @@ body {
   margin-right: 20px;
 }
 
-#mainhelpright i {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 #mainhelpleft {
   padding-top: 20px;
   color: #0d6180;
@@ -253,21 +192,22 @@ body {
   padding-right: 30px;
 }
 
+.fa-angle-right {
+  margin-left: auto;
+  margin-right: auto;
+  flex-grow: 0;
+}
+
 
 .howtohelp {
   scroll-snap-align: start;
-  /* The image used */
   background-image: url("https://cdn.glitch.global/4fddc2d2-8afe-4546-a021-281e7b5d551b/stars%202.png?v=1653193100979");
-
-  /* Full height */
   min-height: 100vh;
-
-  /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 90px
+  padding-bottom: 90px;
 }
 
 .howtohelp h1 {
@@ -277,10 +217,7 @@ body {
   color: #ffffff;
   text-shadow: 2px 5px #000000;
   scroll-behavior: smooth;
-}
-
-.howtohelp i {
-  margin-right: 5px;
+  margin-bottom: 30px;
 }
 
 .howtohelp div{
@@ -399,3 +336,52 @@ Scrolling Button
 Scrolling Button End
 
 */
+
+section {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.scroll2 {
+  opacity: 1;
+  -webkit-transition: all .5s ease-in 3s;
+  transition: all .5s ease-in 3s;
+  position: absolute;
+  bottom: 50px;
+  left: 80%;
+  margin-left: -16px;
+  display: block;
+  width: 32px;
+  height: 32px;
+  border: 2px solid #FFFFFF;
+  background-size: 14px auto;
+  border-radius: 50%;
+  z-index: 2;
+  -webkit-animation: bounce 2s infinite 2s;
+  animation: bounce 2s infinite 2s;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+}
+
+.scroll2:before {
+    position: absolute;
+    top: calc(50% - 8px);
+    left: calc(50% - 6px);
+    transform: rotate(-45deg);
+    display: block;
+    width: 12px;
+    height: 12px;
+    content: "";
+    border: 2px solid white;
+    border-width: 0px 0 2px 2px;
+}
+
+@media only screen and (max-width: 600px) {
+  #mainhelpright{
+    border-radius:0;
+  }
+  #mainhelpleft{
+    display:none;
+  }
+}
